examples/kju/positive/_future_ideas/unit_return_type_as_optional_in_function_declaration.kju
fun f(){
}

fun kju(){
	f();
}