examples/kju/negative/names/wrong_function_case.kju
fun F():Unit{
}

fun kju():Unit{
	F();
}
